@@ -19,6 +19,9 @@ New in v0.7.08 (2016/0?/??)
   - Fixes bug #1588503 b2: large uploads fail due to expired auth token
 * Merged in lp:~aaron-whitehouse/duplicity/fix_pep8
   - Fix PEP8 error in onedrivebackend.py (space before bracket)
+* Fixed bug #822697 ssh-options not passed in rsync over ssh
+  - Added globals.ssh_options to rsync command line
+* Increased default volume size to 200M, was 25M
 
 
 New in v0.7.07.1 (2016/04/19)
